--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@nanostores/react": "^1.0.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
@@ -22,11 +23,14 @@
     "date-fns": "^4.1.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.525.0",
+    "nanostores": "^1.0.1",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-router": "^7.7.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.10"
