--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 	"dependencies": {
 		"@hookform/resolvers": "^5.1.1",
 		"@nanostores/react": "^1.0.0",
+		"@nathanvanbignoot/popover-component": "^1.0.0",
 		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@react-router/node": "^7.7.1",
